--- a/tmux.conf
+++ b/tmux.conf
@@ -3,10 +3,5 @@ unbind C-b
 bind C-l send-prefix
 
 set -g mouse on
-
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-
-set -g mode-mouse on
+set-option default-terminal "screen-256color"
 
