--- a/tmux.conf
+++ b/tmux.conf
@@ -5,3 +5,5 @@ bind C-l send-prefix
 set -g mouse on
 set-option default-terminal "screen-256color"
 
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
+
