--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@ bind C-l send-prefix
 
 set -g mouse on
 set-option default-terminal "screen-256color"
+set-option -sg escape-time 10
+set-option -g focus-events on
 #set-option -ga terminal-overrides ",*256col*:Tc"
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
 
